--- a/src/modules/home/slider/_slider.scss
+++ b/src/modules/home/slider/_slider.scss
@@ -7,6 +7,7 @@
   .sliders{
     display: flex;
     align-items: center;
+    justify-content: space-between;
     gap: 3rem;
     overflow: auto;
     padding: 2rem 0;
