--- a/src/modules/utilities/header/_header.scss
+++ b/src/modules/utilities/header/_header.scss
@@ -78,7 +78,8 @@
   }
 }
 .dropdown{
-  background: #f5f7fb;
+  background: #dae6f5;
+  padding: 1rem 0;
   & p{
     background: #fff;
     cursor: pointer;
