--- a/src/modules/utilities/header/_header.scss
+++ b/src/modules/utilities/header/_header.scss
@@ -40,6 +40,7 @@
     }
     & span{
       position: relative;
+      cursor: pointer;
       & small{
         position: absolute;
         top: -0.25rem;
