--- a/src/modules/auth/_login.scss
+++ b/src/modules/auth/_login.scss
@@ -23,6 +23,13 @@
       font-size: 2rem;
       font-weight: 600;
     }
+    .welcome{
+      color: #008000;
+      text-align: center;
+      font-size: 1.25rem;
+      font-weight: 500;
+      margin-top: 1rem;
+    }
     & form{
       margin-top: 3rem;
       .input{
